# src/main/java/com/example/inventorysystem/dto/VsphereResponse.java
@@ -12,7 +12,6 @@ public class VsphereResponse {
     private final String fqdn;
     private final String vmName;
     private final String vmId;
-    private final String datacenter;
     private final String datastore;
     private final Integer cpuCount;
     private final Integer cpuCores;
@@ -33,7 +32,6 @@ public class VsphereResponse {
         this.fqdn = v.getFqdn();
         this.vmName = v.getVmName();
         this.vmId = v.getVmId();
-        this.datacenter = v.getDatacenter();
         this.datastore = v.getDatastore();
         this.cpuCount = v.getCpuCount();
         this.cpuCores = v.getCpuCores();
